fixup feat(judge): don't allow annotation of whitespaces

--- a/fira-web/src/ui/annotation/AnnotationPart.module.css
+++ b/fira-web/src/ui/annotation/AnnotationPart.module.css
@@ -14,13 +14,13 @@
   cursor: pointer;
 }
 
-.annotationAllowed:hover:not(.rangeStart):not(.isInRange) {
+.annotationAllowedOnPart:hover:not(.rangeStart):not(.isInRange) {
   background-color: hsla(120, 73%, 75%, 50%);
 }
 
 /* mobile devices, touch only */
 @media only screen and (pointer: coarse) {
-  .annotationAllowed {
+  .annotationAllowedInGeneral {
     padding: 3px 6px 3px 9px;
   }
 }
